--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,17 @@
+
+#Other Config
 spring.codec.max-in-memory-size=20MB
+
+#Server config
 server.port=8080
+
+#db Config
+spring.datasource.url=jdbc:mysql://localhost:3306/french_market_database
+spring.datasource.username=springuser
+spring.datasource.password=paopaobao
+spring.jpa.hibernate.ddl-auto=update
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
