--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,21 @@ spring.codec.max-in-memory-size=20MB
 server.port=8080
 
 #db Config
-spring.datasource.url=jdbc:mysql://localhost:3306/french_market_database
-spring.datasource.username=springuser
-spring.datasource.password=paopaobao
+#spring.datasource.url=jdbc:mysql://localhost:3306/french_market_database
+#spring.datasource.username=springuser
+#spring.datasource.password=paopaobao
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/parismarket
+spring.datasource.username=straw
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate configuration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
