--- a/pom.xml
+++ b/pom.xml
@@ -103,18 +103,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.11.0</version> <!-- Use the appropriate version -->
-                    <configuration>
-                        <source>1.8</source> <!-- Set the appropriate source version -->
-                        <target>1.8</target> <!-- Set the appropriate target version -->
-                        <compilerArgs>
-                            <arg>-Xlint:all,-options</arg>
-                            <arg>-source</arg>
-                            <arg>1.8</arg> <!-- Explicitly set the source version -->
-                            <arg>-target</arg>
-                            <arg>1.8</arg> <!-- Explicitly set the target version -->
-                        </compilerArgs>
-                    </configuration>
+                    <version>3.11.0</version>
                 </plugin>
 
 
