--- a/pom.xml
+++ b/pom.xml
@@ -103,11 +103,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.11.0</version> <!-- Use a version known to work with Java 8 -->
-                    <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
-                    </configuration>
+                    <version>3.7.0</version>
                 </plugin>
 
 
